# ctrace

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
src/ctrace/: __init__.py  __main__.py  backend.py  bpftrace_backend.py  dtrace_backend.py  mcp_server.py  schema.py
src/ctrace/scripts/: alloc_trace.bt  alloc_trace.d  io_summary.bt  io_summary.d  sched_summary.bt  sched_summary.d  syscall_summary.bt  syscall_summary.d  tick_trace.bt  tick_trace.d
tests/: test_backend.py  test_dtrace_parsing.py  test_mcp_server.py  test_schema.py  test_structured_output.py  test_target.cpp
